2012-08-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Add Singh algorithm.

	* scribo/binarization/internal/singh_formula.hh,
	* scribo/binarization/internal/singh_functor.hh,
	* scribo/binarization/singh.hh,
	* src/binarization/singh.cc: New.

2012-08-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Make the area value depends on the first scale ratio.

	* scribo/binarization/sauvola_ms.hh: Change area ranges.

	* tests/binarization/sauvola_ms.cc,
	* tests/binarization/sauvola_ms.ref.pbm,
	* tests/binarization/sauvola_ms_weven_hodd.ref.pbm,
	* tests/binarization/sauvola_ms_wodd_heven.ref.pbm,
	* tests/binarization/sauvola_ms_wodd_hodd.ref.pbm: Fix test.

2012-08-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix invalid default options.

	* src/binarization/sauvola_ms_split.cc: Here.

2012-08-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Provide original algorithms without approximations.

	* scribo/binarization/internal/local_threshold_core.hh,
	* scribo/binarization/internal/niblack_formula.hh,
	* scribo/binarization/internal/niblack_functor.hh,
	* scribo/binarization/internal/niblack_threshold_functor.hh,
	* scribo/binarization/internal/sauvola_functor.hh,
	* scribo/binarization/internal/sauvola_threshold_functor.hh,
	* scribo/binarization/internal/wolf_functor.hh,
	* scribo/binarization/niblack.hh,
	* scribo/binarization/wolf.hh: Restore original algorithms.

	* tests/binarization/Makefile.am,
	* tests/binarization/niblack.cc,
	* tests/binarization/niblack.ref.pbm,
	* tests/binarization/niblack_weven_hodd.ref.pbm,
	* tests/binarization/niblack_wodd_heven.ref.pbm,
	* tests/binarization/niblack_wodd_hodd.ref.pbm: Adjust test results.

	* scribo/binarization/internal/niblack_functor_fast.hh,
	* scribo/binarization/internal/wolf_functor_fast.hh,
	* scribo/binarization/niblack_fast.hh,
	* scribo/binarization/wolf_fast.hh,
	* tests/binarization/wolf.cc,
	* tests/binarization/wolf.ref.pbm,
	* tests/binarization/wolf_weven_hodd.ref.pbm,
	* tests/binarization/wolf_wodd_heven.ref.pbm,