@@ -226,13 +226,25 @@ scribo_all \
 scribo_binarization_all \
 scribo_binarization_global_threshold \
 scribo_binarization_global_threshold_auto \
-scribo_binarization_internal_compute_local_threshold \
-scribo_binarization_internal_first_pass_functor \
+scribo_binarization_internal_local_threshold_core \
 scribo_binarization_internal_local_threshold_debug \
 scribo_binarization_internal_niblack_formula \
+scribo_binarization_internal_niblack_functor \
+scribo_binarization_internal_niblack_functor_fast \
+scribo_binarization_internal_niblack_threshold_functor \
 scribo_binarization_internal_sauvola_formula \
+scribo_binarization_internal_sauvola_functor \
+scribo_binarization_internal_sauvola_ms_functor \
+scribo_binarization_internal_sauvola_threshold_functor \
+scribo_binarization_internal_singh_formula \
+scribo_binarization_internal_singh_functor \
+scribo_binarization_internal_wolf_formula \
+scribo_binarization_internal_wolf_functor \
+scribo_binarization_internal_wolf_functor_fast \
+scribo_binarization_kim \
 scribo_binarization_local_threshold \
 scribo_binarization_niblack \
+scribo_binarization_niblack_fast \
 scribo_binarization_niblack_threshold \
 scribo_binarization_otsu \
 scribo_binarization_otsu_threshold \
@@ -240,6 +252,8 @@ scribo_binarization_sauvola \
 scribo_binarization_sauvola_ms \
 scribo_binarization_sauvola_ms_split \
 scribo_binarization_sauvola_threshold \
+scribo_binarization_singh \
+scribo_binarization_wolf \
 scribo_canvas_integral_browsing \
 scribo_convert_to_base64 \
 scribo_core_all \
@@ -475,19 +489,36 @@ scribo_util_box_intersection \
 scribo_util_box_is_included \
 scribo_util_color_to_hex \
 scribo_util_component_precise_outline \
-scribo_util_hex_to_color
+scribo_util_compute_sub_domains \
+scribo_util_hex_to_color \
+scribo_util_init_integral_image \
+scribo_util_integral_sub_sum_sum2_functor \
+scribo_util_integral_sum_sum2_functor \
+scribo_util_integral_sum_sum2_global_min_functor
 
 scribo_all_SOURCES = scribo_all.cc
 scribo_binarization_all_SOURCES = scribo_binarization_all.cc
 scribo_binarization_global_threshold_SOURCES = scribo_binarization_global_threshold.cc
 scribo_binarization_global_threshold_auto_SOURCES = scribo_binarization_global_threshold_auto.cc
-scribo_binarization_internal_compute_local_threshold_SOURCES = scribo_binarization_internal_compute_local_threshold.cc
-scribo_binarization_internal_first_pass_functor_SOURCES = scribo_binarization_internal_first_pass_functor.cc
+scribo_binarization_internal_local_threshold_core_SOURCES = scribo_binarization_internal_local_threshold_core.cc
 scribo_binarization_internal_local_threshold_debug_SOURCES = scribo_binarization_internal_local_threshold_debug.cc
 scribo_binarization_internal_niblack_formula_SOURCES = scribo_binarization_internal_niblack_formula.cc
+scribo_binarization_internal_niblack_functor_SOURCES = scribo_binarization_internal_niblack_functor.cc
+scribo_binarization_internal_niblack_functor_fast_SOURCES = scribo_binarization_internal_niblack_functor_fast.cc
+scribo_binarization_internal_niblack_threshold_functor_SOURCES = scribo_binarization_internal_niblack_threshold_functor.cc
 scribo_binarization_internal_sauvola_formula_SOURCES = scribo_binarization_internal_sauvola_formula.cc
+scribo_binarization_internal_sauvola_functor_SOURCES = scribo_binarization_internal_sauvola_functor.cc
+scribo_binarization_internal_sauvola_ms_functor_SOURCES = scribo_binarization_internal_sauvola_ms_functor.cc
+scribo_binarization_internal_sauvola_threshold_functor_SOURCES = scribo_binarization_internal_sauvola_threshold_functor.cc
+scribo_binarization_internal_singh_formula_SOURCES = scribo_binarization_internal_singh_formula.cc
+scribo_binarization_internal_singh_functor_SOURCES = scribo_binarization_internal_singh_functor.cc
+scribo_binarization_internal_wolf_formula_SOURCES = scribo_binarization_internal_wolf_formula.cc
+scribo_binarization_internal_wolf_functor_SOURCES = scribo_binarization_internal_wolf_functor.cc
+scribo_binarization_internal_wolf_functor_fast_SOURCES = scribo_binarization_internal_wolf_functor_fast.cc
+scribo_binarization_kim_SOURCES = scribo_binarization_kim.cc
 scribo_binarization_local_threshold_SOURCES = scribo_binarization_local_threshold.cc
 scribo_binarization_niblack_SOURCES = scribo_binarization_niblack.cc
+scribo_binarization_niblack_fast_SOURCES = scribo_binarization_niblack_fast.cc
 scribo_binarization_niblack_threshold_SOURCES = scribo_binarization_niblack_threshold.cc
 scribo_binarization_otsu_SOURCES = scribo_binarization_otsu.cc
 scribo_binarization_otsu_threshold_SOURCES = scribo_binarization_otsu_threshold.cc
@@ -495,6 +526,8 @@ scribo_binarization_sauvola_SOURCES = scribo_binarization_sauvola.cc
 scribo_binarization_sauvola_ms_SOURCES = scribo_binarization_sauvola_ms.cc
 scribo_binarization_sauvola_ms_split_SOURCES = scribo_binarization_sauvola_ms_split.cc
 scribo_binarization_sauvola_threshold_SOURCES = scribo_binarization_sauvola_threshold.cc
+scribo_binarization_singh_SOURCES = scribo_binarization_singh.cc
+scribo_binarization_wolf_SOURCES = scribo_binarization_wolf.cc
 scribo_canvas_integral_browsing_SOURCES = scribo_canvas_integral_browsing.cc
 scribo_convert_to_base64_SOURCES = scribo_convert_to_base64.cc
 scribo_core_all_SOURCES = scribo_core_all.cc
@@ -730,5 +763,10 @@ scribo_util_box_intersection_SOURCES = scribo_util_box_intersection.cc
 scribo_util_box_is_included_SOURCES = scribo_util_box_is_included.cc
 scribo_util_color_to_hex_SOURCES = scribo_util_color_to_hex.cc
 scribo_util_component_precise_outline_SOURCES = scribo_util_component_precise_outline.cc
+scribo_util_compute_sub_domains_SOURCES = scribo_util_compute_sub_domains.cc
 scribo_util_hex_to_color_SOURCES = scribo_util_hex_to_color.cc
+scribo_util_init_integral_image_SOURCES = scribo_util_init_integral_image.cc
+scribo_util_integral_sub_sum_sum2_functor_SOURCES = scribo_util_integral_sub_sum_sum2_functor.cc
+scribo_util_integral_sum_sum2_functor_SOURCES = scribo_util_integral_sum_sum2_functor.cc
+scribo_util_integral_sum_sum2_global_min_functor_SOURCES = scribo_util_integral_sum_sum2_global_min_functor.cc
 
