@@ -1,3 +1,7 @@
+2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	* tests/unit_test/unit-tests.mk: Regen.
+
 2012-08-22  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	Add Singh algorithm.
